# glifex

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATUS.md  THIRD_PARTY_NOTICES.md  glifex.py  go.mod  pyproject.toml
.devcontainer/: devcontainer.json
docs/: LAUNCH.md  RETRO-CONTRACT.md  ROADMAP.md  UPSTREAM-NOTES.md  adding-a-language.md  announcement.md  architecture.md  browser-runtimes.md  bx13b-handoff.md  cache-reseed-probe-20260719-021330.md  ci-cd.md  ci-dependency-hardening.md  ci-skip-probe-20260719-062437.md  codespaces.md  contribution-policy.md  dart2js-self-hosted.md  go-self-hosted.md  hermetic-reproducible-builds.md  langbox.md  libriscv-riscv64.md  teavm-javac-compile-ceiling.md  teavm-javac-self-built.md  vixl-arm64.md
e2e/: asm-6502-smoke.spec.js  asm-arm64-smoke.spec.js  asm-riscv64-smoke.spec.js  c-smoke.spec.js  coi-fixtures.js  coi-proactive.spec.js  coi.spec.js  cpp-toolchain.spec.js  csharp-smoke.spec.js  dart-smoke.spec.js  frontend.spec.js  go-smoke.spec.js  java-smoke.spec.js  lab-js-space.spec.js  lab-ladder-ceiling.spec.js  lab-space.spec.js  lab-stack-space.spec.js  lab.spec.js  languages-ui.spec.js  playground.spec.js  playwright.config.js  runtimes.spec.js  rust-smoke.spec.js  sm83-smoke.spec.js
languages/: asm-6502.toml  asm-arm64.toml  asm-riscv64.toml  asm-x86_64.toml  c.toml  cpp.toml  csharp.toml  dart.toml  go.toml  i8080.toml  java.toml  javascript.toml  kotlin.toml  php.toml  python.toml  ruby.toml  rust.toml  sm83.toml  swift.toml  typescript.toml  wat.toml  zig.toml
retro/: package.json  smoke.mjs
tools/: go-vendor-imports.txt  go-vendor.sh  pin-binutils.sh  vendor-pins.env
tools/riscv-spike/: CMakeLists.txt  build-binutils.sh  build.sh  drive.mjs  gx_rv.cpp  probe-emulators.sh  probe-libriscv.sh  run-kata.mjs  try-wasm.sh
tools/riscv-spike/katas/: add.s  auipc.s  compressed.s  loop.s  memops.s
web/: README.md  app.js  asm-arm64-blink.mjs  asm-arm64-core.mjs  asm-arm64-worker.js  asm-riscv64-blink.mjs  asm-riscv64-core.mjs  (+49 more)
(+441 files in other folders)
